--- a/200929 Styles.css
+++ b/200929 Styles.css
@@ -76,6 +76,7 @@ a:hover{
 /*Animations*/
 @keyframes buttonexp {
 	0% {transform: scaleX(0);}
+	100% {transform: scaleX(1);}
 	}
 @keyframes fade {
 	0% {opacity: 0;}
